--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-ruby-sass": "^2.0.5",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-webserver": "^0.9.1",
     "knockout": "^3.3.0"
   }
 }
