--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-jshint": "^1.12.0",
     "gulp-ruby-sass": "^2.0.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webserver": "^0.9.1",
+    "jquery": "^2.1.4",
     "knockout": "^3.3.0"
   }
 }
