--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.12.0",
-    "gulp-ruby-sass": "^2.0.5",
+    "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webserver": "^0.9.1",
     "jquery": "^2.1.4",
     "jshint-stylish": "^2.0.1",
-    "knockout": "^3.3.0"
+    "knockout": "^3.3.0",
+    "node-bourbon": "^4.2.3"
   }
 }
