--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jshint-stylish": "^2.0.1",
     "knockout": "^3.3.0",
     "node-bourbon": "^4.2.3",
-    "node-neat": "^1.7.2"
+    "node-neat": "^1.7.2",
+    "normalize.css": "^3.0.3"
   }
 }
