--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-webserver": "^0.9.1",
-    "jquery": "^2.1.4",
     "jshint-stylish": "^2.0.1",
     "knockout": "^3.3.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "oauth-signature": "^1.3.0"
   }
 }
