--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.12.0",
+    "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-webserver": "^0.9.1",
     "jshint-stylish": "^2.0.1",
     "knockout": "^3.3.0",
     "node-bourbon": "^4.2.3",
     "node-neat": "^1.7.2",
-    "normalize.css": "^3.0.3",
     "oauth-signature": "^1.3.0"
   }
 }
