--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "*.git"
+    "url": "https://github.com/kevinpmbudd/FEND_Project_5.git"
   },
   "author": "Kevin Budd <kevin@kevinbudd.com>",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^1.12.0",
     "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
     "gulp-webserver": "^0.9.1",
+    "imagemin-pngquant": "^4.2.0",
     "jshint-stylish": "^2.0.1",
     "knockout": "^3.3.0",
     "node-bourbon": "^4.2.3",
